# market-tracker

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: .coveragerc  .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_missing_indexes.py  002_backtesting_v2.py  003_add_daily_sentiment_matview.py  003_signal_intelligence.py  004_add_industry_to_stocks.py  004_news_intelligence.py  005_add_signal_feedback.py  005_ml_ensemble.py  006_add_technical_indicator_scores.py  006_options_flow.py  007_infrastructure.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/: admin.py  alerts.py  api_keys.py  articles.py  auth.py  backtests.py  health.py  market_data.py  router.py  sentiment.py  signal_accuracy.py  signals.py  stocks.py  watchlist.py
backend/app/core/: audit.py  cache.py  exceptions.py  logging_config.py  middleware.py  security.py  slow_query.py
backend/app/models/: __init__.py  alert.py  api_key.py  article.py  audit_log.py  backtest.py  cboe_put_call.py  market_data.py  ml_model.py  options_activity.py  scrape_log.py  sector.py  sentiment.py  signal.py  signal_outcome.py  signal_weight.py  stock.py  task_failure.py  user.py  watchlist.py
backend/app/schemas/: admin.py  alert.py  api_key.py  article.py  auth.py  backtest.py  common.py  ml_model.py  (+6 more)
backend/scripts/: seed_historical_data.py  seed_sp500.py
backend/tests/: conftest.py  test_api_keys.py  test_audit.py  test_cache.py  test_dead_letter.py  test_security.py  test_slow_query.py
backend/worker/: beat_schedule.py  celery_app.py
(+187 files in other folders)
